Updates from Overleaf

--- a/proposalI/uwthesis.bib
+++ b/proposalI/uwthesis.bib
@@ -4,6 +4,41 @@
   booktitle={EMNLP},
   year={2014}
 }
+@inproceedings{Peters2019KnowledgeEC,
+  title={Knowledge Enhanced Contextual Word Representations},
+  author={Matthew E. Peters and Mark Neumann and IV RobertLLogan and Roy Schwartz and Vidur Joshi and Sameer Singh and Noah A. Smith},
+  booktitle={EMNLP/IJCNLP},
+  year={2019}
+}
+@inproceedings{Shannon1951PredictionAE,
+  title={Prediction and entropy of printed English},
+  author={Claude E. Shannon},
+  year={1951}
+}
+@article{Smith2019ContextualWR,
+  title={Contextual Word Representations: A Contextual Introduction},
+  author={Noah A. Smith},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1902.06006}
+}
+@article{Athiwaratkun2017MultimodalWD,
+  title={Multimodal Word Distributions},
+  author={Ben Athiwaratkun and Andrew Gordon Wilson},
+  journal={ArXiv},
+  year={2017},
+  volume={abs/1704.08424}
+}
+@inproceedings{You2019LargeBO,
+  title={Large Batch Optimization for Deep Learning: Training BERT in 76 minutes.},
+  author={Yang You and Jing Li and Sashank J. Reddi and Jonathan Hseu and Sanjiv Kumar and Srinadh Bhojanapalli and Xiaodan Song and James Demmel and Kurt Keutzer and Cho-Jui Hsieh},
+  year={2019}
+}
+@inproceedings{Shannon1951PredictionAE,
+  title={Prediction and entropy of printed English},
+  author={Claude E. Shannon},
+  year={1951}
+}
 @article{Mikolov2013EfficientEO,
   title={Efficient Estimation of Word Representations in Vector Space},
   author={Tomas Mikolov and Kai Chen and Gregory S. Corrado and Jeffrey Dean},
@@ -67,7 +102,7 @@
 @misc{Gokaslan2019OpenWeb,  
 	title={OpenWebText Corpus},
 	author={Aaron Gokaslan and Vanya Cohen},
-	howpublished{\url{http://Skylion007.github.io/OpenWebTextCorpus}}, 
+	howpublished={\url{http://Skylion007.github.io/OpenWebTextCorpus}}, 
 	year={2019}
 }
 @misc{peters2018deep,
